# finodays

./: .gitignore  README.md  docker-compose.yml  finodays.ipynb  main.py  openapi.yaml  requirements.txt
backend/: .gitignore  README.md  openapi.json  pyproject.toml
backend/app/: .env  __init__.py  db.py  dependencies.py
backend/app/crud/: cfa.py  cfa_image.py  deal.py  desire.py  offer.py  token.py  trade.py  user.py
backend/app/errors/: desire.py  offer.py
backend/app/models/: __init__.py  cfa.py  desire.py  trade.py
backend/app/routers/: __init__.py  cfa.py  desire.py  offer.py  statistic.py  trade.py
backend/app/schemas/: __init__.py  cfa.py  cfa_image.py  deal.py  offer.py  validators.py
backend/app/serializers/: cfa.py  desire.py  offer.py  trade.py  user.py
backend/app/utils/: __init__.py
backend/scripts/: fill_db.py  stocks.py
backend/tests/: test_desire.py  test_offer.py
data/: __all_models.py  token.py  user.py
db/: db.db
frontend/: .env.development  .env.production  index.html  package.json  pnpm-lock.yaml
frontend/src/: config.ts  index.scss  main.tsx
server/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  setup.py
server/app/: .env  __init__.py
server/data/: __all_models.py  cfa.py  cfa_image.py  db_session.py  deal.py  desire.py  offer.py  token.py  trade.py  user.py
server/db/: db.db  fill_db.py
server/ml/: __main__.py  requirements.txt  stat.py  test.py
server/openapi_server/: __main__.py
server/scripts/: fill_db.py  our_ticker.csv  stocks.py  tickers.csv
server/tests/: conftest.py  temp.json  (+6 more)
(+145 files in other folders)
